--- a/tempmail/templates/parciais/_footer.html
+++ b/tempmail/templates/parciais/_footer.html
@@ -14,4 +14,7 @@
     <a href="{% url 'contato' %}" class="hover:text-orange-600 transition">
         {% trans "Contato" %}
     </a>
+    <a href="https://smsrush.com.br/" target="_blank" rel="noopener noreferrer" class="hover:text-orange-600 transition">
+        SMSRush
+    </a>
 </footer>
